--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 
     <header>
         <nav class="navbar">
-            <span>🍔</span>
-            <a href="./index.html" class="navbar__title">CIRA</a>   
+    
+            <div>
+            <img src="./Assets/menu.png" alt="Menú Hamburgesa">
+            <a href="./index.html" class="navbar__title">CIRA</a>
+            </div>
+
             <ul>
                 <li>
                     <a href="./pages/nuevos.html">NUEVOS</a>
