--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <main>
         <section class="banner">
-            <h1>CIRA <br/> Tienda virtual <br/> de moda circular</h1>
+            <h1>Tienda virtual <br/> de moda circular</h1>
             <img src="./Assets/banner.jpg" alt="Banner">
         </section>
 
