--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
         <nav class="navbar">
             
             <div>
-                <img src="./Assets/menu.png" alt="Menú Hamburgesa">
+                <img src="../Assets/menu.png" alt="Menú Hamburgesa">
                 <a href="../index.html" class="navbar__title">CIRA</a>
             </div>
             
