--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -31,7 +31,7 @@
         <nav class="navbar">
             
             <div>
-                <img src="./Assets/menu.png" alt="Menú Hamburgesa">
+                <img src="../Assets/menu.png" alt="Menú Hamburgesa">
                 <a href="../index.html" class="navbar__title">CIRA</a>
             </div>
             
