agregado menú hamburguesa funcional en todas las páginas

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
             </ul>
             </div>
 
-            <a href="./index.html" class="navbar__title">CIRA</a>
+            <a href="./index.html" class="navbar__menu-title">CIRA</a>
             </div>
 
+            <div>
             <ul>
                 <li>
                     <a href="./pages/nuevos.html">NUEVOS</a>
@@ -64,6 +65,8 @@
                      <a href="./pages/contacto.html">CONTACTO</a>
                  </li>
             </ul>
+            </div>
+
         </nav>
     </header>
 
