--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -37,7 +37,7 @@
             <div class="navbar__menu">
             
             <div class="dropdown">
-            <img class="btn btn-secondary dropdown-toggle card bg-transparent mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="./Assets/menu.png" alt="Menú Hamburguesa">
+            <img class="btn btn-secondary dropdown-toggle card bg-transparent mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="../Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./nuevos.html"></a>NUEVOS</li>
                 <li><a class="dropdown-item" href="./second-hand.html"></a>SECOND HAND</li>
@@ -46,8 +46,26 @@
             </ul>
             </div>
 
-            <a href="../index.html" class="navbar__title">CIRA</a>
+            <a href="../index.html" class="navbar__menu-title">CIRA</a>
             </div>
+
+            <div>
+            <ul>
+                <li>
+                    <a href="./nuevos.html">NUEVOS</a>
+                </li>
+                <li>
+                    <a href="./second-hand.html">SECOND HAND</a>
+                </li>
+                <li> 
+                    <a href="./nosotros.html">NOSOTROS</a>
+                 </li>
+                 <li>  
+                     <a href="./contacto.html">CONTACTO</a>
+                 </li>
+            </ul>
+            </div>
+            
         </nav>
     </header>
 
