--- a/index.html
+++ b/index.html
@@ -77,7 +77,20 @@
         </section>
 
         <section class="multimedia">
-            <video src="./Assets/video.mp4" autoplay >Video</video>
+            <!-- <video src="./Assets/video.mp4" autoplay >Video</video> -->
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner rounded">
+                  <div class="carousel-item active">
+                    <img src="./Assets/usado7.jpeg" class="d-block w-100" alt="usado7">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Assets/usado9.jpeg" class="d-block w-100" alt="usado9">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Assets/nuevobordo.jpeg" class="d-block w-100" alt="nuevo-bordo">
+                  </div>
+                </div>
+              </div>
         </section>
 
         <section>
