reacomodo de footer

--- a/index.html
+++ b/index.html
@@ -146,8 +146,11 @@
         <div class="footer__paid">
         <h3>Medios de pago</h3>
         <div>
-        <h4><i class="bi bi-cash-coin">Efectivo</i></h4>
-        <h4><i class="bi bi-bank">Transferencias</i></h4>
+        <h4>
+            <i class="bi bi-cash-coin"></i>
+        Efectivo</h4>
+        <h4><i class="bi bi-bank"></i>
+        Transferencias</h4>
         </div>
         </div>
 
