reintento de subir los cambios github

--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
         <div class="footer__paid">
         <h3>Medios de pago</h3>
         <div>
-        <h4>
-            <i class="bi bi-cash-coin"></i>
+        <h4><i class="bi bi-cash-coin"></i>
         Efectivo</h4>
         <h4><i class="bi bi-bank"></i>
         Transferencias</h4>
