--- a/index.html
+++ b/index.html
@@ -133,27 +133,28 @@
         </section>   
     </main>
 
-    <footer>
+    <footer class="footer__grid">
 
-        <div class="footer__grid">
-
-        <div>
+        <div class="footer__grid-insta">
         <h3>Seguinos en</h3>
         <img src="./Assets/logoinsta.png" alt="Logo de Instagram">
         <a href="https://www.instagram.com/cira.secondhand/" target="_blank" rel="noopener noreferrer">cira.seconhand</a>
         </div>
 
-        <div class="footer__paid">
+        <div class="footer__grid-paid">
         <h3>Medios de pago</h3>
-        <div>
         <h4><i class="bi bi-cash-coin"></i>
         Efectivo</h4>
         <h4><i class="bi bi-bank"></i>
         Transferencias</h4>
         </div>
-        </div>
 
-        </div>
+        <div class="footer__grid-wsp">
+            <a href="https://api.whatsapp.com/send?phone=5493516451717" target="_blank" rel="noopener noreferrer">
+                <img src="./Assets/whatsapp.png" alt="Icono de whatsapp">
+            </a>
+        </div>    
+        
     </footer>
     
 </body>
