--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="./estilo.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -38,8 +38,8 @@
     
             <div class="navbar__menu">
             
-            <div class="dropdown">
-            <img class="btn btn-secondary dropdown-toggle card bg-transparent mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="./Assets/menu.png" alt="Menú Hamburguesa">
+            <div class="navbar__menu-dropdown">
+            <img class="btn btn-secondary dropdown-toggle card bg-transparent  mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="./Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./pages/nuevos.html"></a>NUEVOS</li>
                 <li><a class="dropdown-item" href="./pages/second-hand.html"></a>SECOND HAND</li>
@@ -51,7 +51,7 @@
             <a href="./index.html" class="navbar__menu-title">CIRA</a>
             </div>
 
-            <div>
+            <div class="navbar__pages">
             <ul>
                 <li>
                     <a href="./pages/nuevos.html">NUEVOS</a>
@@ -77,7 +77,7 @@
             <img src="./Assets/banner.jpg" alt="Banner">
         </section>
 
-        <section class="multimedia">
+        <section class="carousel">
             <!-- <video src="./Assets/video.mp4" autoplay >Video</video> -->
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded">
@@ -95,7 +95,7 @@
         </section>
 
         <section>
-            <h2>Últimos ingresos</h2>
+            <h2>ÚLTIMOS INGRESOS</h2>
 
             <div class="card">
 
