--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="../estilo.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -38,7 +38,7 @@
     
             <div class="navbar__menu">
             
-            <div class="dropdown">
+            <div class="navbar__menu-dropdown">
             <img class="btn btn-secondary dropdown-toggle card bg-transparent mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="../Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./nuevos.html"></a>NUEVOS</li>
@@ -51,7 +51,7 @@
             <a href="../index.html" class="navbar__menu-title">CIRA</a>
             </div>
 
-            <div>
+            <div class="navbar__pages">
             <ul>
                 <li>
                     <a href="./nuevos.html">NUEVOS</a>
@@ -73,7 +73,7 @@
 
     <main>
         <section class="description">
-            <h2>Acerca de nosotros</h2>
+            <h2>ACERCA DE NOSOTROS</h2>
             <p>Hola chicas! Somos CIRA, dos hermanas que nos encanta la ropa con mucha onda, y queremos contarles un poquito de este empredimiento. 
                 Nuestro propósito es seleccionar prendas nuevas y de segunda mano para hacerlas circular y así, darles una nueva oportunidad de que sigan brillando en ustedes. 
                 De esta manera también, contribuimos al cuidado del medio ambiente y de este planeta que tanto queremos ♻️🌍.
