--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="../estilo.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
 
 </head>
 
@@ -37,7 +37,7 @@
     
             <div class="navbar__menu">
             
-            <div class="dropdown">
+            <div class="navbar__menu-dropdown">
             <img class="btn btn-secondary dropdown-toggle card bg-transparent mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="../Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./nuevos.html"></a>NUEVOS</li>
@@ -50,7 +50,7 @@
             <a href="../index.html" class="navbar__menu-title">CIRA</a>
             </div>
 
-            <div>
+            <div class="navbar__pages">
             <ul>
                 <li>
                     <a href="./nuevos.html">NUEVOS</a>
