extend de button

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,9 +108,13 @@
             <label for="newsletter">¿Desea suscribirse a nuestro Newsletter?
         </div>
 
+        <div class="form__btn">
+
             <button type="submit">Enviar formulario</button>
             <button type="reset">Limpiar formulario</button>  
             
+        </div>
+
         </section>
     </form>
 
