--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="navbar__menu">
             
             <div class="navbar__menu-dropdown">
-            <img class="btn btn-secondary dropdown-toggle card bg-transparent  mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="./Assets/menu.png" alt="Menú Hamburguesa">
+            <img class="btn btn-secondary dropdown-toggle card bg-transparent mt-4 p-0" style="width: 3rem; height: 3rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="./Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./pages/nuevos.html"></a>NUEVOS</li>
                 <li><a class="dropdown-item" href="./pages/second-hand.html"></a>SECOND HAND</li>
