agregado mixin y mapa

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="./css/style.css">
@@ -95,7 +95,7 @@
         </section>
 
         <section>
-            <h2>ÚLTIMOS INGRESOS</h2>
+            <h2 class="subtitle__principal">ÚLTIMOS INGRESOS</h2>
 
             <div class="card">
 
