--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,19 +9,19 @@
 
     <title>NOSOTROS</title>
     
-    <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon"/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@700&display=swap" rel="stylesheet"/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
+    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
@@ -39,7 +39,7 @@
             <div class="navbar__menu">
             
             <div class="navbar__menu-dropdown">
-            <img class="btn btn-secondary dropdown-toggle card bg-transparent mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="../Assets/menu.png" alt="Menú Hamburguesa">
+            <img class="btn btn-secondary dropdown-toggle card bg-transparent mt-4 p-0" style="width: 3rem; height: 3rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="../Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./nuevos.html"></a>NUEVOS</li>
                 <li><a class="dropdown-item" href="./second-hand.html"></a>SECOND HAND</li>
@@ -72,12 +72,17 @@
     </header>
 
     <main>
-        <section class="description">
-            <h2>ACERCA DE NOSOTROS</h2>
-            <p>Hola chicas! Somos CIRA, dos hermanas que nos encanta la ropa con mucha onda, y queremos contarles un poquito de este empredimiento. 
+        <section>
+            <h2 class="subtitle__secundario">ACERCA DE NOSOTROS</h2>
+            <p class="description">Hola chicas! Somos CIRA, dos hermanas que nos encanta la ropa con mucha onda, y queremos contarles un poquito de este empredimiento. 
                 Nuestro propósito es seleccionar prendas nuevas y de segunda mano para hacerlas circular y así, darles una nueva oportunidad de que sigan brillando en ustedes. 
                 De esta manera también, contribuimos al cuidado del medio ambiente y de este planeta que tanto queremos ♻️🌍.
                 Cualquier consulta o duda, estamos a disposición. 💫</p>
+        </section>
+
+        <section class="img__perfiles">
+            <img class="img-ro" src="../Assets/Ro.jpeg" alt="Foto de perfil de Ro">
+            <img class="img-flor" src="../Assets/Flor.jpg" alt="Foto de perfil de Flor">
         </section>
     </main>
 
