--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -8,22 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>PRENDAS NUEVAS</title>
-    <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon"/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@700&display=swap" rel="stylesheet"/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
+    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="../css/style.css"/>
@@ -38,7 +38,7 @@
             <div class="navbar__menu">
             
             <div class="navbar__menu-dropdown">
-            <img class="btn btn-secondary dropdown-toggle card bg-transparent mb-0 p-0" style="width: 2rem; height: 2rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="../Assets/menu.png" alt="Menú Hamburguesa">
+            <img class="btn btn-secondary dropdown-toggle card bg-transparent mt-4 p-0" style="width: 3rem; height: 3rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="../Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./nuevos.html"></a>NUEVOS</li>
                 <li><a class="dropdown-item" href="./second-hand.html"></a>SECOND HAND</li>
@@ -72,7 +72,7 @@
 
     <main>
         <section>
-            <h2>PRENDAS NUEVAS</h2>
+            <h2 class="subtitle__secundario">PRENDAS NUEVAS</h2>
 
             <div class="card">
             
