--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>CIRA</title>
+    <title>CIRA | Tienda de venta de ropa nueva y usada</title>
+   
+    <meta name="description" content="Tienda de venta de indumentaria nueva y usada especialmente seleccionada de excelente calidad">
+
     <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon"/>
     
+    <!-- Fuentes de Google -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
@@ -23,9 +27,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet"/>
 
+    <!-- Bootstrap -->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Estilos con css -->
 
     <link rel="stylesheet" href="./css/style.css">
 
@@ -82,39 +90,39 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded">
                   <div class="carousel-item active">
-                    <img src="./Assets/usado7.jpeg" class="d-block w-100" alt="usado7">
+                    <img src="./Assets/remera-fibrana-estampada.jpeg" class="d-block w-100" alt="Remera de fibrana estampada"/>
                   </div>
                   <div class="carousel-item">
-                    <img src="./Assets/usado9.jpeg" class="d-block w-100" alt="usado9">
+                    <img src="./Assets/polera.jpeg" class="d-block w-100" alt="Polera"/>
                   </div>
                   <div class="carousel-item">
-                    <img src="./Assets/nuevobordo.jpeg" class="d-block w-100" alt="nuevo-bordo">
+                    <img src="./Assets/plush-bordo.jpeg" class="d-block w-100" alt="Conjunto de plush bordo"/>
                   </div>
                 </div>
               </div>
         </section>
 
         <section>
-            <h2 class="subtitle__principal">ÚLTIMOS INGRESOS</h2>
+            <h2 class="subtitle__principal">ÚLTIMAS PRENDAS SELECCIONADAS</h2>
 
             <div class="card">
 
             <article class="card__product">
-            <img src="./Assets/usado10.jpeg" alt="usado10"/>
+            <img src="./Assets/sweater-corto.jpeg" alt="Sweater corto"/>
             <h3>Sweater corto</h3>
             <p>$1.800</p>
             <a href="./pages/second-hand.html">Ver más</a>
             </article>
 
             <article class="card__product">
-            <img src="./Assets/usado5.jpeg" alt="usado5"/>
+            <img src="./Assets/top-volados.jpeg" alt="Top con volados"/>
             <h3>Top con volados</h3>
             <p>$400</p>
             <a href="./pages/second-hand.html">Ver más</a>
             </article>
 
             <article class="card__product">
-            <img src="./Assets/usado6.jpeg" alt="usado6"/>
+            <img src="./Assets/camisa-encaje.jpeg" alt="Camisa de encaje"/>
             <h3>Camisa de encaje</h3>
             <p>$1.200</p>
             <a href="./pages/second-hand.html">Ver más</a>
@@ -136,17 +144,17 @@
     <footer class="footer__grid">
 
         <div class="footer__grid-insta">
-        <h3>Seguinos en</h3>
+        <h4>Seguinos en</h4>
         <img src="./Assets/logoinsta.png" alt="Logo de Instagram">
         <a href="https://www.instagram.com/cira.secondhand/" target="_blank" rel="noopener noreferrer">cira.seconhand</a>
         </div>
 
         <div class="footer__grid-paid">
-        <h3>Medios de pago</h3>
-        <h4><i class="bi bi-cash-coin"></i>
-        Efectivo</h4>
-        <h4><i class="bi bi-bank"></i>
-        Transferencias</h4>
+        <h4>Medios de pago</h4>
+        <span><i class="bi bi-cash-coin"></i>
+        Efectivo</span>
+        <span><i class="bi bi-bank"></i>
+        Transferencias</span>
         </div>
 
         <div class="footer__grid-wsp">
