--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -7,8 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>PRENDAS NUEVAS</title>
+    <title>PRENDAS NUEVAS | Ropa nueva especialmente seleccionada</title>
+
     <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon"/>
+
+    <!-- Fuentes de Google -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
@@ -22,10 +25,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet"/>
 
+    <!-- Bootstrap -->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Estilos con css -->
+    
     <link rel="stylesheet" href="../css/style.css"/>
 
 </head>
@@ -77,14 +84,14 @@
             <div class="card">
             
             <article class="card__product">
-            <img src="../Assets/nuevobordo.jpeg" alt="nuevoBordo">
+            <img src="../Assets/plush-bordo.jpeg" alt="Conjunto de plush bordo"/>
             <h3>Conjunto de plush bordo</h3>
             <p>$5.500 <br/> Talle disponible: único</p>
             <a href="">Agregar a carrito</a>
             </article>
 
             <article class="card__product">
-            <img src="../Assets/nuevogris.jpeg" alt="nuevoGris">
+            <img src="../Assets/plush-gris.jpeg" alt="Conjunto de plush gris"/>
             <h3>Conjunto de plush gris</h3>
             <p>$5.500<br/> Talle disponible: único</p>
             <a href="">Agregar a carrito</a>
@@ -98,17 +105,17 @@
     <footer class="footer__grid">
 
         <div class="footer__grid-insta">
-        <h3>Seguinos en</h3>
+        <h4>Seguinos en</h4>
         <img src="../Assets/logoinsta.png" alt="Logo de Instagram">
         <a href="https://www.instagram.com/cira.secondhand/" target="_blank" rel="noopener noreferrer">cira.seconhand</a>
         </div>
 
         <div class="footer__grid-paid">
-        <h3>Medios de pago</h3>
-        <h4><i class="bi bi-cash-coin"></i>
-        Efectivo</h4>
-        <h4><i class="bi bi-bank"></i>
-        Transferencias</h4>
+        <h4>Medios de pago</h4>
+        <span><i class="bi bi-cash-coin"></i>
+        Efectivo</span>
+        <span><i class="bi bi-bank"></i>
+        Transferencias</span>
         </div>
 
         <div class="footer__grid-wsp">
