agregado carrito a todas las paginas

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                  </li>
             </ul>
 
-            <div class="navbar__pages-buy">
-                <a href=""><img src="./Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
+            <div class="navbar__buy">
+                 <a href=""><img src="./Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
             </div>
