--- a/pages/second-hand.html
+++ b/pages/second-hand.html
@@ -72,6 +72,11 @@
                      <a href="./contacto.html">CONTACTO</a>
                  </li>
             </ul>
+
+            <div class="navbar__buy">
+                <a href=""><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
+            </div>
+
             </div>
             
         </nav>
