nuevo background en la pagina imagenes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -82,13 +82,10 @@
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h2 class="subtitle__secundario">ACERCA DE NOSOTROS</h2>
-            <p class="description">Hola chicas! Somos CIRA, dos hermanas que nos encanta la ropa con mucha onda, y queremos contarles un poquito de este empredimiento. 
-                Nuestro propósito es seleccionar prendas nuevas y de segunda mano para hacerlas circular y así, darles una nueva oportunidad de que sigan brillando en ustedes. 
-                De esta manera también, contribuimos al cuidado del medio ambiente y de este planeta que tanto queremos ♻️🌍.
-                Cualquier consulta o duda, estamos a disposición. 💫</p>
+    <main class="us">
+        <section class="us__container">
+            <h2 class="us__container-sub">ACERCA DE NOSOTRAS</h2>
+            <p class="us__container-description">Hola chicas! Somos CIRA, dos hermanas que nos encanta la ropa con mucha onda, y queremos contarles un poquito de este empredimiento. Nuestro propósito es seleccionar prendas nuevas y de segunda mano para hacerlas circular y así, darles una nueva oportunidad de que sigan brillando en ustedes. De esta manera también, contribuimos al cuidado del medio ambiente y de este planeta que tanto queremos ♻️🌍. Cualquier consulta o duda, estamos a disposición. 💫</p>
         </section>
     </main>
 
