revision para entrega de proyecto final

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>CIRA | Tienda de venta de ropa nueva y usada</title>
+    <title>CIRA | Tienda de venta de ropa nueva y reciclada</title>
    
     <meta name="description" content="Tienda de venta de indumentaria nueva y usada especialmente seleccionada de excelente calidad">
 
@@ -47,7 +47,7 @@
             <div class="navbar__menu">
             
             <div class="navbar__menu-dropdown">
-            <img class="btn btn-secondary dropdown-toggle card bg-transparent mt-4 p-0" style="width: 3rem; height: 3rem;" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="./Assets/menu.png" alt="Menú Hamburguesa">
+            <img class="btn btn-secondary dropdown-toggle card bg-transparent"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" src="./Assets/menu.png" alt="Menú Hamburguesa">
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a class="dropdown-item" href="./pages/nuevos.html"></a>NUEVOS</li>
                 <li><a class="dropdown-item" href="./pages/second-hand.html"></a>SECOND HAND</li>
@@ -75,7 +75,7 @@
                  </li>
             </ul>
 
-            <div class="navbar__buy">
+            <div class="navbar__pages-buy">
                  <a href=""><img src="./Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
@@ -85,7 +85,7 @@
 
     <main>
         <section class="banner">
-            <h1>Tienda virtual <br/> de moda circular</h1>
+            <h1>Tienda virtual de moda circular</h1>
             <img src="./Assets/banner.jpg" alt="Banner">
         </section>
 
