--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,6 +35,10 @@
     
     <link rel="stylesheet" href="../css/style.css"/>
 
+    <!--Javascript-->
+
+    <script defer src="../js/contacto.js"></script>
+
 </head>
 
 <body>
@@ -84,14 +88,14 @@
 
     <main>
 
-        <form action="" class="form">
+        <form action="" class="form" id="form">
 
             <div class="form__data">
                 <label for="nombre">Nombre completo:</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..."/>
+                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..." tabindex="0"/>
 
                 <label for="correo">Email:</label>
-                <input type="email" name="correo" id="correo" placeholder="Ingrese su email..."/>
+                <input type="email" name="correo" id="correo" placeholder="Ingrese su email..." tabindex="1"/>
 
                 <label for="cosulta">Consulta</label>
                 <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Ingrese su consulta ..."></textarea>
@@ -121,8 +125,8 @@
             </div>
 
             <div class="form__btn">
-                <button type="submit">Enviar formulario</button>
-                <button type="reset">Limpiar formulario</button>  
+                <button type="submit" id="enviar">Enviar formulario</button>
+                <button type="reset" id="limpiarForm">Limpiar formulario</button>  
             </div>
         
         </form>
