--- a/pages/second-hand.html
+++ b/pages/second-hand.html
@@ -34,6 +34,10 @@
     <!-- Estilos con css -->
 
     <link rel="stylesheet" href="../css/style.css"/>
+
+    <!--Javascript-->
+
+    <script defer src="../js/second-hand.js"></script>
     
 </head>
 
@@ -87,9 +91,9 @@
         <section>
             <h2 class="subtitle__secundario">SECOND HAND</h2>
 
-            <div class="card">
+            <div class="card" id="card">
             
-            <article class="card__product">
+            <!-- <article class="card__product">
                 <img src="../Assets/buzo-lanilla.JPG" alt="Buzo de lanilla con capucha"/>
                 <h3>Buzo de lanilla con capucha</h3>
                 <p>$1.000 <br/> Talle disponible: 1</p>
@@ -157,7 +161,7 @@
                 <h3>Sweater corto</h3>
                 <p>$1.800<br/> Talle disponible: único</p>
                 <a href="">Agregar a carrito</a>
-            </article>
+            </article> -->
 
             </div>
 
