--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </ul>
 
             <div class="navbar__pages-buy">
-                 <a href=""><img src="./Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
+                 <a href="./pages/carrito.html"><img src="./Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
             </div>
@@ -114,27 +114,6 @@
             <h2 class="subtitle__principal">ÚLTIMAS PRENDAS SELECCIONADAS</h2>
 
             <div class="card" id="card">
-
-            <!-- <article class="card__product">
-            <img src="./Assets/sweater-corto.jpeg" alt="Sweater corto"/>
-            <h3>Sweater corto</h3>
-            <p>$1.800</p>
-            <a href="./pages/second-hand.html">Ver más</a>
-            </article>
-
-            <article class="card__product">
-            <img src="./Assets/top-volados.jpeg" alt="Top con volados"/>
-            <h3>Top con volados</h3>
-            <p>$400</p>
-            <a href="./pages/second-hand.html">Ver más</a>
-            </article>
-
-            <article class="card__product">
-            <img src="./Assets/camisa-encaje.jpeg" alt="Camisa de encaje"/>
-            <h3>Camisa de encaje</h3>
-            <p>$1.200</p>
-            <a href="./pages/second-hand.html">Ver más</a>
-            </article> -->
 
             </div>
 
