--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -74,7 +74,7 @@
             </ul>
 
             <div class="navbar__pages-buy">
-                <a href=""><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
+                <a href="./carrito.html"><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
             </div>
