--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -79,7 +79,7 @@
             </ul>
 
             <div class="navbar__pages-buy">
-                <a href=""><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
+                <a href="./carrito.html"><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
             </div>
@@ -93,22 +93,6 @@
             <h2 class="subtitle__secundario">PRENDAS NUEVAS</h2>
 
             <div class="card" id="card">
-
-            <!-- <article class="card__product">
-            <img src="../Assets/plush-bordo.jpeg" alt="Conjunto de plush bordo"/>
-            <h3>Conjunto de plush bordo</h3>
-            <h5>$5.500</h5>
-            <p>Talle disponible: único</p>
-            <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-            <img src="../Assets/plush-gris.jpeg" alt="Conjunto de plush gris"/>
-            <h3>Conjunto de plush gris</h3>
-            <p>$5.500<br/> Talle disponible: único</p>
-            <a href="">Agregar a carrito</a>
-            </article> -->
-           
 
             </div>
 
