--- a/pages/second-hand.html
+++ b/pages/second-hand.html
@@ -78,7 +78,7 @@
             </ul>
 
             <div class="navbar__pages-buy">
-                <a href=""><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
+                <a href="./carrito.html"><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
             </div>
@@ -93,76 +93,6 @@
 
             <div class="card" id="card">
             
-            <!-- <article class="card__product">
-                <img src="../Assets/buzo-lanilla.JPG" alt="Buzo de lanilla con capucha"/>
-                <h3>Buzo de lanilla con capucha</h3>
-                <p>$1.000 <br/> Talle disponible: 1</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-        
-            <article class="card__product">
-                <img src="../Assets/remera-leutthe.JPG" alt="Remera Le Utthe"/>
-                <h3>Remera Le Utthe</h3>
-                <p>$500 <br/> Talle disponible: S</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/sweater-coral.jpg" alt="Sweater Coral"/>
-                <h3>Sweater coral</h3>
-                <p>$800 <br/> Talle disponible: único</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/camisa-encaje-2.jpeg" alt="Camisa de encaje"/>
-                <h3>Camisa de encaje</h3>
-                <p>$1.200 <br/> Talle disponible: 1</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/top-volados.jpeg" alt="Top con volados"/>
-                <h3>Top con volados</h3>
-                <p>$400 <br/> Talle disponible: 1</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/camisa-encaje.jpeg" alt="Camisa de encaje"/>
-                <h3>Camisa de encaje</h3>
-                <p>$1.200 <br/> Talle disponible: 1</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/remera-fibrana-estampada.jpeg" alt="Remera de fibrana estampada"/>
-                <h3>Remera de fibrana estampada</h3>
-                <p>$500 <br/> Talle disponible: único</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/parka.JPG" alt="Parka"/>
-                <h3>Parka</h3>
-                <p>$8.000<br/> Talle disponible: 44</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/polera.jpeg" alt="Polera"/>
-                <h3>Polera</h3>
-                <p>$800 <br/> Talle disponible: único</p>
-                <a href="">Agregar a carrito</a>
-            </article>
-
-            <article class="card__product">
-                <img src="../Assets/sweater-corto.jpeg" alt="Sweater corto"/>
-                <h3>Sweater corto</h3>
-                <p>$1.800<br/> Talle disponible: único</p>
-                <a href="">Agregar a carrito</a>
-            </article> -->
-
             </div>
 
         </section>
