Poniendo en funcionamiento todos los botones del carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -101,11 +101,12 @@
             </thead>
 
             <tbody class="table__body">
-   
+                
             </tbody>
         </table>
-        <button class="btn__carrito" id="btn_compra">COMPRAR</button>
-        <button class="btn__carrito" id="btn_vaciar">VACIAR CARRITO</button>           
+
+        <a href="../index.html"><button class="btn__carrito" id="btn_compra">COMPRAR</button></a>
+        <a href="../index.html"><button class="btn__carrito" id="btn_vaciar">VACIAR CARRITO</button></a>        
     </main>
 
     <footer class="footer__grid">
