Utilizando operadores ternarios

--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
         </section>
 
         <section class="register">
-            <form action="" id="form">
+            <form action="">
                 <label for="registrate">Registrate y enterate de nuestras promociones antes que nadie!</label>
-                <input type="email" name="correo" id="registrate" placeholder="Tu correo electronico">
-                <button type="submit">Enviar</button>
+                <input type="email" name="correo" id="mail" placeholder="Tu correo electronico" required/>
+                <button type="submit" id="enviarEmail">Enviar</button>
             </form>
         </section>   
     </main>
-
+   
     <footer class="footer__grid">
 
         <div class="footer__grid-insta">
