--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,7 +92,7 @@
 
             <div class="form__data">
                 <label for="nombre">Nombre completo:</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..."/>
+                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..." required/>
 
                 <label for="correo">Email:</label>
                 <input type="email" name="correo" id="correo" placeholder="Ingrese su email..."/>
