Agregando libreria Sweetalert

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <!--Javascript-->
-
+    
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script defer src="./js/index.js"></script>
 
 </head>
@@ -123,7 +124,7 @@
             <form action="">
                 <label for="registrate">Registrate y enterate de nuestras promociones antes que nadie!</label>
                 <input type="email" name="correo" id="mail" placeholder="Tu correo electronico" required/>
-                <button type="submit" id="enviarEmail">Enviar</button>
+                <button type="button" id="enviarEmail">Enviar</button>
             </form>
         </section>   
     </main>
