--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,6 +37,7 @@
 
     <!--Javascript-->
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script defer src="../js/contacto.js"></script>
 
 </head>
@@ -125,7 +126,7 @@
             </div>
 
             <div class="form__btn">
-                <button type="submit" id="enviar">Enviar formulario</button>
+                <button type="button" id="enviar">Enviar formulario</button>
                 <button type="reset" id="limpiarForm">Limpiar formulario</button>  
             </div>
         
