--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -36,8 +36,10 @@
     <link rel="stylesheet" href="../css/style.css"/>
 
     <!--Javascript-->
-
+    
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script defer src="../js/nuevos.js"></script>
+    <script defer src="../js/funciones.js"></script>
 
 </head>
 
