Agregado archivo json de productos y obtenidos desde un fetch

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -107,7 +107,7 @@
         </table>
 
        <button class="btn__carrito" id="btn_compra">COMPRAR</button>
-        <a href="../index.html"><button class="btn__carrito" id="btn_vaciar">VACIAR CARRITO</button></a>   
+       <button class="btn__carrito" id="btn_vaciar">VACIAR CARRITO</button></a> 
     </main>
 
     <footer class="footer__grid">
@@ -137,4 +137,3 @@
 
 </body>
 </html>
-
