--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -93,13 +93,13 @@
 
             <div class="form__data">
                 <label for="nombre">Nombre completo:</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..." required/>
+                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..." value="Matias Sivadon"/>
 
                 <label for="correo">Email:</label>
-                <input type="email" name="correo" id="correo" placeholder="Ingrese su email..."/>
+                <input type="email" name="correo" id="correo" placeholder="Ingrese su email..." value="sivadon.m@gmail.com"/>
 
                 <label for="cosulta">Consulta</label>
-                <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Ingrese su consulta ..."></textarea>
+                <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Ingrese su consulta ...">Quiero consultar si tienen conjunto plush en otros colores a los publicados</textarea>
             </div>
 
             <div class="form__fieldset">
