--- a/pages/nuevos.html
+++ b/pages/nuevos.html
@@ -38,7 +38,6 @@
     <!--Javascript-->
     
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script defer src="../js/nuevos.js"></script>
     <script defer src="../js/funciones.js"></script>
 
 </head>
@@ -94,8 +93,8 @@
         <section>
             <h2 class="subtitle__secundario">PRENDAS NUEVAS</h2>
 
-            <div class="card" id="card">
-
+            <div class="card" id="nuevos">
+ 
             </div>
 
         </section>
