Entrega final JS

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -98,31 +98,8 @@
                 <label for="correo">Email:</label>
                 <input type="email" name="correo" id="correo" placeholder="Ingrese su email..." value="sivadon.m@gmail.com"/>
 
-                <label for="cosulta">Consulta</label>
+                <label for="cosulta">Consulta:</label>
                 <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Ingrese su consulta ...">Quiero consultar si tienen conjunto plush en otros colores a los publicados</textarea>
-            </div>
-
-            <div class="form__fieldset">
-                <fieldset>
-                    <legend>Elija la opción que corresponda</legend>
-                    <label for="yacompre">Ya compré</label>
-                    <input type="radio" name="tipousuario" id="yacompre"/>
-                    <label for="quierocomprar">Quiero comprar</label>
-                    <input type="radio" name="tipousuario" id="quierocomprar"/>
-                </fieldset>
-            </div>
-        
-            <div class="form__genero">
-                <label for="genero">Género</label>
-                <select class="form__genero-option" name="genero" id="genero">
-                    <option value="Masculino">Masculino</option>
-                    <option value="Femenino">Femenino</option>
-                </select>
-            </div>
-
-            <div class="form__sub">
-                <input type="checkbox" name="newsletter" id="newsletter"/>
-                <label for="newsletter">¿Desea suscribirse a nuestro Newsletter?
             </div>
 
             <div class="form__btn">
