Empezando a agregar backend al proyecto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,15 +15,6 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"/>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@700&display=swap" rel="stylesheet"/>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com"/> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet"/>
 
     <!-- Bootstrap -->
 
@@ -93,13 +84,13 @@
 
             <div class="form__data">
                 <label for="nombre">Nombre completo:</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..." value="Matias Sivadon"/>
+                <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre..."/>
 
                 <label for="correo">Email:</label>
-                <input type="email" name="correo" id="correo" placeholder="Ingrese su email..." value="sivadon.m@gmail.com"/>
+                <input type="email" name="correo" id="correo" placeholder="Ingrese su email..."/>
 
                 <label for="cosulta">Consulta:</label>
-                <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Ingrese su consulta ...">Quiero consultar si tienen conjunto plush en otros colores a los publicados</textarea>
+                <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Ingrese su consulta ..."></textarea>
             </div>
 
             <div class="form__btn">
