Obteniendo los productos de la base de datos

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -72,7 +72,8 @@
             </ul>
 
             <div class="navbar__pages-buy">
-                 <a href="./pages/carrito.html"><img src="./Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
+                <span id="counter"></span>
+                <a href="./pages/carrito.html"><img src="./Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
             </div>
