--- a/src/public/pages/carrito.html
+++ b/src/public/pages/carrito.html
@@ -70,6 +70,7 @@
             </ul>
 
             <div class="navbar__pages-buy">
+                <span id="counter"></span>
                 <a href=""><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
@@ -84,7 +85,6 @@
         <table class="table">
             <thead class="table__head">
                 <tr>
-                    <th>ID</th>
                     <th>DESCRIPCIÓN</th>
                     <th>IMPORTE</th>
                     <th>TALLE</th>
