--- a/src/public/pages/nuevos.html
+++ b/src/public/pages/nuevos.html
@@ -71,6 +71,7 @@
             </ul>
 
             <div class="navbar__pages-buy">
+                <span id="counter"></span>
                 <a href="./carrito.html"><img src="../Assets/carrito-de-compras.png" alt="Carrito de compras"></a>
             </div>
 
